# Bala_fetch_take_home-

./: Makefile  README.md  pyproject.toml
Docs/: AdditionalDoc.md  deployment.md
src/: kafka_consumer.py
tests/: test_kafka_consumer.py
