[tool.poetry]
name = "Fetch_DE-take-home-bala"
version = "0.1.0"
description = "Interview test with Fetch"
authors = ["Balasiva Pindra"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
coverage = "^7.6.0"
confluent-kafka = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
exclude_lines = [
    "# pragma: no cover"
]